tests/build/fail/widget_new/incorrect_arg_type4.stderr
error[E0599]: no method named `args` found for struct `background_gradient_ArgsImpl<AngleDegree, bool>` in the current scope
 --> $DIR/incorrect_arg_type4.rs:8:9
  |
8 |         background_gradient = {
  |         ^^^^^^^^^^^^^^^^^^^ method not found in `background_gradient_ArgsImpl<AngleDegree, bool>`
  |
  = note: the method `args` exists but the following trait bounds were not satisfied:
          `bool: IntoVar<GradientStops>`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
 --> $DIR/incorrect_arg_type4.rs:8:9
  |
8 |         background_gradient = {
  |         ^^^^^^^^^^^^^^^^^^^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
  |
  = help: the following implementations were found:
            <bool as IntoVar<AutoSize>>
            <bool as IntoVar<CaptureMode>>
            <bool as IntoVar<FactorNormal>>
            <bool as IntoVar<FontFeatureState>>
          and 2 others
  = note: required by `background_gradient_ArgsImpl`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
